Correct info gap

--- a/blocks/profile.css
+++ b/blocks/profile.css
@@ -94,12 +94,13 @@
     justify-content: center;
     display: flex;
     flex-wrap: wrap;
+    grid-gap: 14px 10px;
   }
 
   .profile__title {
     line-height: normal;
     font-size: 22px;
-    margin: 0 10px 0 0;
+    margin: 0;
   }
 
   .profile__edit-button {
@@ -110,7 +111,7 @@
   }
 
   .profile__description {
-    margin: 14px 43px 0 43px;
+    margin: 0;
     text-align: center;
     font-size: 14px;
     line-height: 17px;
@@ -121,4 +122,3 @@
     width: 282px;
   }
 }
-/*what commands here are redundant*/
